<resources>

    <string name="app_name">Pirc</string>

    <string name="audio">Audio</string>
    <string name="title_section_by_albums">By albums</string>
    <string name="title_section_by_artists">By artists</string>
    <string name="title_section_by_languages">By languages</string>
    <string name="title_section_by_qualities">By qualities</string>
    <string name="title_section_by_titles">By titles</string>
    <string name="title_section_search">Search</string>
    <string name="video">Video</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_maintenance">Maintenance</string>
    <string name="action_pause">Pause</string>
    <string name="action_player">Player</string>
    <string name="action_stop">Stop</string>
    <string name="action_settings">Settings</string>

    <string name="no_results">No results.</string>
    <string name="please_wait">Please wait</string>
    <string name="failed_to_get_data">Failed to get data. Check your network connection.</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="audio_output">Audio output</string>
    <string-array name="audio_outputs">
        <item>Analog</item>
        <item>Digital</item>
    </string-array>
    <string name="language_and_quality">Language and quality</string>
    <string name="none">None</string>
    <string name="play">Play</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>

    <string name="both">Both</string>
    <string name="down">Down</string>
    <string name="fast_forward">Fast forward</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="faster">Faster</string>
    <string name="forward">Forward</string>
    <string name="pause">Pause</string>
    <string name="rewind">Rewind</string>
    <string name="speed">Speed</string>
    <string name="slower">Slower</string>
    <string name="stop">Stop</string>
    <string name="up">Up</string>
    <string name="volume">Volume</string>

    <string name="any">Any</string>
    <string name="filter_videos">Filter videos</string>
    <string name="language">Language</string>
    <string name="quality">Quality</string>
    <string name="search">Search</string>

    <string name="hint_rebuild">Tap the button below to rebuild media database. Note that this may take quite some time
        depending the size of your collections.</string>
    <string name="hint_synchronize">Tap the button below to synchronize the media database. This is much more faster
        than a complete rebuild, though it is also less accurate. If you experience something weird, you may try
        reset.</string>
    <string name="maintenance">Maintenance</string>
    <string name="rebuild_database">Rebuild database</string>
    <string name="synchronize_database">Synchronize database</string>

</resources>
