<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_pause"
          android:title="@string/action_pause"
          android:icon="@drawable/ic_media_pause"
          app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_stop"
          android:title="@string/action_stop"
          android:icon="@drawable/ic_media_stop"
          app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_player"
          android:title="@string/action_player"
          android:icon="@drawable/ic_player_control"
          app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_maintenance"
          android:title="@string/action_maintenance"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
