<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context="com.pie.pirc.gui.fragments.VideoDetailsFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:layout_gravity="center"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:orientation="vertical"
                  tools:context="com.pie.pirc.gui.fragments.PlayerFragment">

        <!-- Seek and pause buttons. -->
        <LinearLayout android:id="@+id/linearLayout1"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="50dp"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal">

            <ImageButton android:id="@+id/btnFastRewind"
                         android:contentDescription="@string/fast_rewind"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_previous" />

            <ImageButton android:id="@+id/btnRewind"
                         android:contentDescription="@string/rewind"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_rew" />

            <ImageButton android:id="@+id/btnPause"
                         android:contentDescription="@string/pause"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_pause" />

            <ImageButton android:id="@+id/btnForward"
                         android:contentDescription="@string/forward"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_ff" />

            <ImageButton android:id="@+id/btnFastForward"
                         android:contentDescription="@string/fast_forward"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_next" />

        </LinearLayout>

        <!-- Stop button. -->
        <ImageButton android:id="@+id/btnStop"
                     android:contentDescription="@string/stop"
                     android:layout_gravity="center_horizontal|top"
                     android:layout_height="0dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:src="@drawable/ic_media_stop" />

        <!-- Speed. -->
        <LinearLayout android:id="@+id/linearLayout2"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="10dp"
                      android:layout_width="match_parent"
                      android:orientation="horizontal">

            <ImageButton android:id="@+id/btnSlower"
                         android:contentDescription="@string/slower"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_rew" />

            <TextView android:id="@+id/tvSpeed"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_margin="12dp"
                      android:layout_weight="10"
                      android:layout_width="wrap_content"
                      android:text="@string/speed"
                      android:textAllCaps="true"
                      android:textSize="17sp" />

            <ImageButton android:id="@+id/btnFaster"
                         android:contentDescription="@string/faster"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_ff" />

        </LinearLayout>

        <!-- Volume. -->
        <LinearLayout android:id="@+id/linearLayout3"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="10dp"
                      android:layout_width="match_parent"
                      android:orientation="horizontal">

            <ImageButton android:id="@+id/btnVolumeDown"
                         android:contentDescription="@string/down"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_rew" />

            <TextView android:id="@+id/tvVolume"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_margin="12dp"
                      android:layout_weight="10"
                      android:layout_width="wrap_content"
                      android:text="@string/volume"
                      android:textAllCaps="true"
                      android:textSize="17sp" />

            <ImageButton android:id="@+id/btnVolumeUp"
                         android:contentDescription="@string/up"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_media_ff" />

        </LinearLayout>

        <!-- Player to control. -->
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

            <RadioButton android:id="@+id/rbAudio"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_width="wrap_content"
                         android:onClick="onPlayerTypeChecked"
                         android:text="@string/audio" />
            <RadioButton android:id="@+id/rbVideo"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_width="wrap_content"
                         android:onClick="onPlayerTypeChecked"
                         android:text="@string/video" />
            <RadioButton android:id="@+id/rbAll"
                         android:checked="true"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_width="wrap_content"
                         android:onClick="onPlayerTypeChecked"
                         android:text="@string/both" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>
