<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context="com.pie.pirc.gui.fragments.VideoDetailsFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_gravity="top"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  tools:context="com.pie.pirc.gui.fragments.VideoDetailsFragment">

        <TextView android:id="@+id/tvFilterVideos"
                  android:layout_height="wrap_content"
                  android:layout_margin="15dp"
                  android:layout_width="wrap_content"
                  android:text="@string/filter_videos"
                  android:textSize="22sp" />

        <TextView android:id="@+id/tvTitle"
                  android:layout_height="wrap_content"
                  android:layout_margin="12dp"
                  android:layout_width="wrap_content"
                  android:text="@string/title"
                  android:textSize="17sp" />

        <EditText android:id="@+id/etTitle"
                  android:layout_gravity="center_horizontal"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="1dp"
                  android:layout_marginLeft="8dp"
                  android:layout_marginRight="8dp"
                  android:layout_marginTop="1dp"
                  android:layout_width="match_parent" />

        <TextView android:id="@+id/tvLanguage"
                  android:layout_height="wrap_content"
                  android:layout_margin="12dp"
                  android:layout_width="wrap_content"
                  android:text="@string/language"
                  android:textSize="17sp" />

        <Spinner android:id="@+id/spLanguages"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="1dp"
                 android:layout_width="match_parent" />

        <TextView android:id="@+id/tvQuality"
                  android:layout_height="wrap_content"
                  android:layout_margin="12dp"
                  android:layout_width="wrap_content"
                  android:text="@string/quality"
                  android:textSize="17sp" />

        <Spinner android:id="@+id/spQualities"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="1dp"
                 android:layout_width="match_parent" />

        <TextView android:id="@+id/tvSubtitle"
                  android:layout_height="wrap_content"
                  android:layout_margin="12dp"
                  android:layout_width="wrap_content"
                  android:text="@string/subtitle"
                  android:textSize="17sp" />

        <Spinner android:id="@+id/spSubtitles"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="1dp"
                 android:layout_width="match_parent" />

        <Button android:id="@+id/btnSearch"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:text="@string/search" />

    </LinearLayout>

</ScrollView>
